requirements.txt update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
+torch>=1.7
 opencv-python
-pillow
-sahi
-torch
-torchvision
-pycocotools
 matplotlib
-scikit-learn
 numpy
-PyYAML
+sahi>=0.11.13
 tqdm
-seaborn
-thop
-pandas
+Pillow
+dvc[aws]
+boto3
